--- a/SeleniumWithNUnit/SeleniumWithNUnit.csproj
+++ b/SeleniumWithNUnit/SeleniumWithNUnit.csproj
@@ -75,6 +75,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Demo3WithNormal\TestClass.cs" />
+    <Compile Include="POM\CustomLibrary.cs" />
     <Compile Include="POM\GenericCollection.cs" />
     <Compile Include="Demo2WithSetandGetMethods\GetValuesFromElements.cs" />
     <Compile Include="POM\LoginPageObjectModel.cs" />
