--- a/SeleniumWithNUnit/SeleniumWithNUnit.csproj
+++ b/SeleniumWithNUnit/SeleniumWithNUnit.csproj
@@ -54,12 +54,19 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Excel, Version=2.1.2.3, Culture=neutral, PublicKeyToken=93517dbe6a4012fa, processorArchitecture=MSIL">
+      <HintPath>..\packages\ExcelDataReader.2.1.2.3\lib\net45\Excel.dll</HintPath>
+    </Reference>
+    <Reference Include="ICSharpCode.SharpZipLib, Version=0.86.0.518, Culture=neutral, PublicKeyToken=1b03e6acf1164f73, processorArchitecture=MSIL">
+      <HintPath>..\packages\SharpZipLib.0.86.0\lib\20\ICSharpCode.SharpZipLib.dll</HintPath>
+    </Reference>
     <Reference Include="nunit.framework, Version=3.12.0.0, Culture=neutral, PublicKeyToken=2638cd05610744eb, processorArchitecture=MSIL">
       <HintPath>..\packages\NUnit.3.12.0\lib\net45\nunit.framework.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.IO.Compression" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -74,6 +81,9 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataDriverTesting\ExcelUtil.cs" />
+    <Compile Include="DataDriverTesting\PageObjectModelForDDT.cs" />
+    <Compile Include="DataDriverTesting\TestClass.cs" />
     <Compile Include="Demo3WithNormal\TestClass.cs" />
     <Compile Include="POM\GenericCollection.cs" />
     <Compile Include="Demo2WithSetandGetMethods\GetValuesFromElements.cs" />
@@ -90,6 +100,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="AppData\DataStorage.xlsx" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
