--- a/SeleniumWithNUnit/packages.config
+++ b/SeleniumWithNUnit/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ExcelDataReader" version="2.1.2.3" targetFramework="net461" />
   <package id="NUnit" version="3.12.0" targetFramework="net461" />
   <package id="NUnit3TestAdapter" version="3.16.1" targetFramework="net461" developmentDependency="true" />
   <package id="Selenium.Support" version="3.141.0" targetFramework="net461" />
   <package id="Selenium.WebDriver" version="3.141.0" targetFramework="net461" />
   <package id="Selenium.WebDriver.ChromeDriver" version="80.0.3987.10600" targetFramework="net461" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net461" />
 </packages>
